k8s/stage-kafka-calibrate.yaml
###########################################################
# Start deployment of calibrate kafka connection - staging
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stage-airqo-kafka-calibrate
  namespace: staging
spec:
  minReadySeconds: 10
  replicas: 2
  selector:
    matchLabels:
      app: stage-airqo-kafka-calibrate
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: stage-airqo-kafka-calibrate
    spec:
      containers:
      - name: stage-airqo-kafka-calibrate
        image: us.gcr.io/airqo-250220/stage-kafka-calibrate:latest
        imagePullPolicy: Always
        resources: {}
