k8s/prod-analytics-api.yaml
###########################################################
# Start deployment of analytics api
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-analytics-api
  namespace: production
spec:
  selector:
    matchLabels:
      app: analytics-api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: analytics-api
    spec:
      containers:
        - name: analytics-api
          image: us.gcr.io/airqo-250220/airqo-analytics-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: analytics-api
---
kind: Service
apiVersion: v1
metadata:
  name: airqo-analytics-api-svc
  namespace: production
spec:
  selector:
    app: analytics-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30003
  type: NodePort
