k8s/prod-auth-api.yaml
###########################################################
# Start deployment of auth api
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-auth-api
  namespace: production
spec:
  selector:
    matchLabels:
      app: auth-api
  replicas: 2
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth-api
          image: us.gcr.io/airqo-250220/airqo-auth-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: auth-api
---
kind: Service
apiVersion: v1
metadata:
  name: airqo-auth-api-svc
  namespace: production
spec:
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
  type: NodePort
