k8s/prod-calibrate-api.yaml
###########################################################
# Start deployment of calibrate microservice - staging
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-prod-calibrate
  namespace: production
spec:
  selector:
    matchLabels:
      app: calibrate
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: calibrate
    spec:
      containers:
        - name: calibrate
          image: us.gcr.io/airqo-250220/airqo-calibrate-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
              name: calibrate
          # readynessProbe:
          #   httpGet:
          #     path: /health
          #     port: 4001
          #   initialDelaySecond: 5
          #   periodSeconds: 3
          #   successThreshold: 1
---
kind: Service
apiVersion: v1
metadata:
  name: airqo-calibrate-svc
  namespace: production
spec:
  selector:
    app: calibrate
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
      nodePort: 30011
  type: NodePort
