k8s/prod-locate-api.yaml
###########################################################
# Start deployment of locate api
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-locate-api
  namespace: production
spec:
  selector:
    matchLabels:
      app: locate-api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: locate-api
    spec:
      containers:
        - name: locate-api
          image: us.gcr.io/airqo-250220/airqo-locate-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
              name: locate-api
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 4001
          #   initialDelaySecond: 5
          #   periodSeconds: 3
          #   successThreshold: 1
---
kind: Service
apiVersion: v1
metadata:
  name: airqo-locate-api-svc
  namespace: production
spec:
  selector:
    app: locate-api
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
      nodePort: 30004
  type: NodePort
