k8s/prod-location-registry-api.yaml
###########################################################
# Start deployment of location registry microservice
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-location-registry-api
  namespace: production
spec:
  selector:
    matchLabels:
      app: location-registry-api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: location-registry-api
    spec:
      containers:
        - name: loc-registry
          image: us.gcr.io/airqo-250220/airqo-location-registry-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: loc-registry
---
kind: Service
apiVersion: v1
metadata:
  name: airqo-location-registry-api-svc
  namespace: production
spec:
  selector:
    app: location-registry-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30005
  type: NodePort
