k8s/stage-auth-api.yaml
###########################################################
# Start deployment of auth api - Staging
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-stage-auth-api
  namespace: staging
spec:
  selector:
    matchLabels:
      app: sta-auth-api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: sta-auth-api
    spec:
      containers:
        - name: sta-auth-api
          image: us.gcr.io/airqo-250220/airqo-stage-auth-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: sta-auth-api
          # readynessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3000
          #   initialDelaySecond: 5
          #   periodSeconds: 3
          #   successThreshold: 1
---
kind: Service
apiVersion: v1
metadata:
  name: airqo-stage-auth-api-svc
  namespace: staging
spec:
  selector:
    app: sta-auth-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31000
  type: NodePort
