k8s/stage-calibrate-api.yaml
###########################################################
# Start deployment of calibrate microservice - staging
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-stage-calibrate
  namespace: staging
spec:
  selector:
    matchLabels:
      app: sta-calibrate
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: sta-calibrate
    spec:
      containers:
        - name: sta-calibrate
          image: us.gcr.io/airqo-250220/airqo-stage-calibrate-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
              name: sta-calibrate
---
kind: Service
apiVersion: v1
metadata:
  name: airqo-stage-calibrate-svc
  namespace: staging
spec:
  selector:
    app: sta-calibrate
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
      nodePort: 31011
  type: NodePort
