k8s/stage-data-mgt-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: airqo-stage-data-mgt-api
  name: airqo-stage-data-mgt-api
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: airqo-stage-data-mgt-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: NodePort
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: airqo-stage-data-mgt-api
    spec:
      containers:
        - name: airqo-stage-data-mgt-api
          image: us.gcr.io/airqo-250220/airqo-stage-data-mgt-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3000
          #   initialDelaySecond: 5
          #   periodSeconds: 3
          #   successThreshold: 1
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: NodePort
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: airqo-stage-data-mgt-api
  name: airqo-stage-data-mgt-api-svc
  namespace: staging
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31001
  selector:
    io.kompose.service: airqo-stage-data-mgt-api
  type: NodePort
status:
  loadBalancer: {}
