k8s/stage-device-monitor-api.yaml
###########################################################
# Start deployment of device-monitoring microservice - staging
###########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-stage-device-monitor-api
  namespace: staging
spec:
  selector:
    matchLabels:
      app: sta-device-monitor
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: sta-device-monitor
    spec:
      containers:
        - name: sta-dev-monitor
          image: us.gcr.io/airqo-250220/airqo-stage-device-monitor-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
              name: sta-dev-monitor
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 4001
          #   initialDelaySecond: 5
          #   periodSeconds: 3
          #   successThreshold: 1
---
kind: Service
apiVersion: v1
metadata:
  name: airqo-stage-device-monitor-api-svc
  namespace: staging
spec:
  selector:
    app: sta-device-monitor
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
      nodePort: 31006
  type: NodePort
