k8s/stage-temp-device-registry-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airqo-temp-stage-device-registry-api
  namespace: staging
spec:
  selector:
    matchLabels:
      app: temp-dev-reg-api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: sta-device-reg-api
    spec:
      containers:
        - name: sta-dev-reg-api
          image: us.gcr.io/airqo-250220/airqo-temp-stage-device-registry-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: temp-dev-reg-api

---
kind: Service
apiVersion: v1
metadata:
  name: airqo-temp-stage-device-registry-api-svc
  namespace: staging
spec:
  selector:
    app: temp-dev-reg-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32002
  type: NodePort
